--- a/catalog.html
+++ b/catalog.html
@@ -10,11 +10,11 @@
     		<a class="main-header-logo" href="index.html">
     			<img src="img/index-logo.svg" width="111" height="24" alt= "Логотип барбершопа «Бородинский»">
     		</a>
-    		<ul class="site-nadigation">
+    		<ul class="site-navigation">
     			<li><a href="info.index.html">Информация</a></li>
     			<li><a href="news.index.html">Новости</a></li>
     			<li><a href="price.html">Прайс-лист</a></li>
-    			<li><a href="catalog.html">Магазин</a></li>
+    			<li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
     			<li><a href="contacts.html">Контакты</a></li>
     		</ul>
     		<ul class="user-navigation">
@@ -24,156 +24,158 @@
     </header>
 
     <main class="container">
-        <h1 class="page-title">Средства для ухода</h1>
-        <ul class="breadcrumbs">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
-            <li class="breadcrumbs-current">Средства для ухода</li>
+      <h1 class="page-title">Средства для ухода</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li class="breadcrumbs-current">Средства для ухода</li>
+      </ul>
+      <section class="filters">
+        <h2 class="visually-hidden">Фильтр товаров</h2>
+        <!-- Здесь будет форма -->
+      </section>
+
+      <section class="catalog">
+        <h2 class="visually-hidden">Список средств для ухода</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog.html">
+                <span>Набор для путешествий</span>
+                <span>«Baxter of California»</span>
+              </a>        
+            </h3>
+            <p>
+              <a href="catalog.html">
+                <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-price">
+              <b>2 900 ₽</b>
+              <a href="#" class="button">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog.html">
+                <span>Увлажняющий кондиционер </span>
+                <span>«Baxter of California»</span>
+              </a>
+            </h3>
+            <p>
+              <a href="catalog.html">
+                <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-price">
+              <b>750 ₽</b>
+              <a href="#" class="button">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog.html">
+                <span>Гель для волос </span>
+                <span>«Suavecito»</span>
+              </a>
+            </h3>
+            <p>
+              <a href="catalog.html">
+                <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
+              </a>
+            </p>
+            <p class="catalog-item-price">
+              <b>290 ₽</b>
+              <a href="#" class="button">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog.html">
+                <span>Глина для укладки волос </span>
+                <span>«Аmerican Crew»</span>
+              </a>
+            </h3>
+            <p>
+              <a href="catalog.html">
+                <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «Аmerican Crew»">
+              </a>
+            </p>
+            <p class="catalog-item-price">
+              <b>500 ₽</b>
+              <a href="#" class="button">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog.html">
+                <span>Гель для волос</span>
+                <span>«Аmerican Crew»</span>
+              </a>
+            </h3>
+            <p>
+              <a href="catalog.html">
+                <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «Аmerican Crew»">
+              </a>
+            </p>
+            <p class="catalog-item-price">
+              <b>300 ₽</b>
+              <a href="#" class="button">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog.html">
+                <span>Набор для бритья</span>
+                <span>«Baxter of California»</span>
+              </a>
+            </h3>
+              <p>
+                <a href="catalog.html">
+                  <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+                </a>
+              </p>
+              <p class="catalog-item-price">
+                <b>3 900 ₽</b>
+                <a href="#" class="button">Купить</a>
+              </p>
+          </li>
         </ul>
-        <section class="filters">
-            <h2 class="visually-hidden">Фильтр товаров</h2>
-            <!-- Здесь будет форма -->
-        </section>
-
-        <section class="catalog">
-            <h2 class="visually-hidden">Список средств для ухода</h2>
-            <ul class="catalog-list">
-                <li class="catalog-item">
-                    <h3>
-                        <a href="catalog.html">
-                            <span>Набор для путешествий</span>
-                            <span>«Baxter of California»</span>
-                        </a>
-                    </h3>
-                    <p>
-                        <a href="catalog.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
-                        </a>
-                    </p>
-                    <p class="catalog-item-price">
-                        <b>2 900 ₽</b>
-                        <a href="#" class="button">Купить</a>
-                    </p>
-                </li>
-                <li class="catalog-item">
-                    <h3>
-                        <a href="catalog.html">
-                            <span>Увлажняющий кондиционер </span>
-                            <span>«Baxter of California»</span>
-                        </a>
-                    </h3>
-                    <p>
-                        <a href="catalog.html">
-                            <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
-                        </a>
-                    </p>
-                    <p class="catalog-item-price">
-                        <b>750 ₽</b>
-                        <a href="#" class="button">Купить</a>
-                    </p>
-                </li>
-                <li class="catalog-item">
-                    <h3>
-                        <a href="catalog.html">
-                            <span>Гель для волос </span>
-                            <span>«Suavecito»</span>
-                        </a>
-                    </h3>
-                    <p>
-                        <a href="catalog.html">
-                            <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
-                        </a>
-                    </p>
-                    <p class="catalog-item-price">
-                        <b>290 ₽</b>
-                        <a href="#" class="button">Купить</a>
-                    </p>
-                </li>
-                <li class="catalog-item">
-                    <h3>
-                        <a href="catalog.html">
-                            <span>Глина для укладки волос </span>
-                            <span>«Аmerican Crew»</span>
-                        </a>
-                    </h3>
-                    <p>
-                        <a href="catalog.html">
-                            <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «Аmerican Crew»">
-                        </a>
-                    </p>
-                    <p class="catalog-item-price">
-                        <b>500 ₽</b>
-                        <a href="#" class="button">Купить</a>
-                    </p>
-                </li>
-                <li class="catalog-item">
-                    <h3>
-                        <a href="catalog.html">
-                            <span>Гель для волос</span>
-                            <span>«Аmerican Crew»</span>
-                        </a>
-                    </h3>
-                    <p>
-                        <a href="catalog.html">
-                            <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «Аmerican Crew»">
-                        </a>
-                    </p>
-                    <p class="catalog-item-price">
-                        <b>300 ₽</b>
-                        <a href="#" class="button">Купить</a>
-                    </p>
-                </li>
-                <li class="catalog-item">
-                    <h3>
-                        <a href="catalog.html">
-                            <span>Набор для бритья</span>
-                            <span>«Baxter of California»</span>
-                        </a>
-                    </h3>
-                    <p>
-                        <a href="catalog.html">
-                            <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-                        </a>
-                    </p>
-                    <p class="catalog-item-price">
-                        <b>3 900 ₽</b>
-                        <a href="#" class="button">Купить</a>
-                    </p>
-                </li>
-            </ul>
-            <ul class="pagination-list">
-                <li class="pagination-item"><a href="#">1</a></li>
-                <li class="pagination-item pagination-item-current"><a>2</a></li>
-                <li class="pagination-item"><a href="#">3</a></li>
-                <li class="pagination-item"><a href="#">4</a></li>
-            </ul>
-        </section>
-
-        <footer class="main-footer">
-                <p class="footer-contacts">
-                    Барбершоп «Бородинский»<br>
-                    Адрес: г. Санкт-Петербург, Б.Конюшенная, д.19/8<br>
-                    <a href="map.html">Как нас найти?</a><br>
-                    Телефон: +7(812)666-82-66
-                </p>
-                    <div class="footer-social">
-                        <b>Давайте дружить!</b>
-                        <ul>
-                            <li class="social-button"><a href="#">Вконтакте</a></li>
-                            <li class="social-button"><a href="#">Фейсбук</a></li>
-                            <li class="social-button"><a href="#">Инстаграм</a></li>
-                        </ul>
-                    </div>
-                    <p class="footer-copyright">
-                        <b>Разработано:</b>
-                        <a href="https://htmlacademy.ru/">HTML Academy</a>
-                    </p>
-            </footer>
-
-            <section class="modal modal-login">
-                <h2>Личный кабинет</h2>
-                <p>Введите свой логин и пароль.</p>
-                <!-- Здесь будет форма -->
-                <span class="modal-close">Х</span>
-            </section>
+        <ul class="pagination-list">
+          <li class="pagination-item"><a href="#">1</a></li>
+          <li class="pagination-item pagination-item-current"><a>2</a></li>
+          <li class="pagination-item"><a href="#">3</a></li>
+          <li class="pagination-item"><a href="#">4</a></li>
+        </ul>
+      </section>
     </main>
+    
+    <footer class="main-footer">
+      <p class="footer-contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б.Конюшенная, д.19/8<br>
+          <a href="map.html">Как нас найти?</a><br>
+          Телефон: +7(812)666-82-66
+      </p>
+      <div class="footer-social">
+        <b>Давайте дружить!</b>
+        <ul>
+          <li class="social-button"><a href="#">Вконтакте</a></li>
+          <li class="social-button"><a href="#">Фейсбук</a></li>
+          <li class="social-button"><a href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>Разработано:</b>
+        <a href="https://htmlacademy.ru/">HTML Academy</a>
+      </p>
+    </footer>
+
+    <section class="modal modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль.</p>
+      <!-- Здесь будет форма -->
+      <span class="modal-close">Х</span>
+    </section>
+  </body>
+</html>    
