--- a/catalog-item.html
+++ b/catalog-item.html
@@ -41,7 +41,7 @@
         <ul class="product-photo-preview">
           <li><img src="img/product-small-1.jpg" width="148" height="149" alt="Фото в анфас"></li>
           <li><img src="img/product-small-2.jpg" width="148" height="149" alt="Фото в профиль"></li>
-          <li><img ssrc="img/product-small-3.jpg" width="148" height="149" alt="Фотоотдельной части"></li>
+          <li><img src="img/product-small-3.jpg" width="148" height="149" alt="Фото отдельной части"></li>
         </ul>
       </section>
 
