--- a/catalog.html
+++ b/catalog.html
@@ -39,102 +39,102 @@
         <h2 class="visually-hidden">Список средств для ухода</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <h3>
-              <a href="catalog.html">
-                <span>Набор для путешествий</span>
-                <span>«Baxter of California»</span>
-              </a>        
-            </h3>
             <p>
-              <a href="catalog.html">
+              <a class="catalog-item-image" href="catalog.html">
                 <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
               </a>
             </p>
+            <h3>
+              <a class="catalog-item-caption" href="catalog.html">
+                <span class="catalog-item-caption-name">Набор для путешествий</span>
+                <span class="catalog-item-caption-brand">«Baxter of California»</span>
+              </a>        
+            </h3>
             <p class="catalog-item-price">
               <b>2 900 ₽</b>
               <a href="#" class="button">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog.html">
-                <span>Увлажняющий кондиционер </span>
-                <span>«Baxter of California»</span>
-              </a>
-            </h3>
             <p>
-              <a href="catalog.html">
+              <a class="catalog-item-image" href="catalog.html">
                 <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
               </a>
             </p>
+            <h3>
+              <a class="catalog-item-caption" href="catalog.html">
+                <span class="catalog-item-caption-name">Увлажняющий кондиционер </span>
+                <span class="catalog-item-caption-brand">«Baxter of California»</span>
+              </a>
+            </h3>
             <p class="catalog-item-price">
               <b>750 ₽</b>
               <a href="#" class="button">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog.html">
-                <span>Гель для волос </span>
-                <span>«Suavecito»</span>
-              </a>
-            </h3>
             <p>
-              <a href="catalog.html">
+              <a class="catalog-item-image" href="catalog.html">
                 <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
               </a>
             </p>
+            <h3>
+              <a class="catalog-item-caption" href="catalog.html">
+                <span class="catalog-item-caption-name">Гель для волос </span>
+                <span class="catalog-item-caption-brand">«Suavecito»</span>
+              </a>
+            </h3>
             <p class="catalog-item-price">
               <b>290 ₽</b>
               <a href="#" class="button">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog.html">
-                <span>Глина для укладки волос </span>
-                <span>«Аmerican Crew»</span>
-              </a>
-            </h3>
             <p>
-              <a href="catalog.html">
+              <a class="catalog-item-image" href="catalog.html">
                 <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «Аmerican Crew»">
               </a>
             </p>
+            <h3>
+              <a class="catalog-item-caption" href="catalog.html">
+                <span class="catalog-item-caption-name">Глина для укладки волос </span>
+                <span class="catalog-item-caption-brand">«Аmerican Crew»</span>
+              </a>
+            </h3>
             <p class="catalog-item-price">
               <b>500 ₽</b>
               <a href="#" class="button">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
-            <h3>
-              <a href="catalog.html">
-                <span>Гель для волос</span>
-                <span>«Аmerican Crew»</span>
-              </a>
-            </h3>
             <p>
-              <a href="catalog.html">
+              <a class="catalog-item-image" href="catalog.html">
                 <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «Аmerican Crew»">
               </a>
             </p>
+            <h3>
+              <a class="catalog-item-caption" href="catalog.html">
+                <span class="catalog-item-caption-name">Гель для волос</span>
+                <span class="catalog-item-caption-brand">«Аmerican Crew»</span>
+              </a>
+            </h3>
             <p class="catalog-item-price">
               <b>300 ₽</b>
               <a href="#" class="button">Купить</a>
             </p>
           </li>
           <li class="catalog-item">
+            <p>
+              <a class="catalog-item-image" href="catalog.html">
+                <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+              </a>
+            </p>
             <h3>
-              <a href="catalog.html">
-                <span>Набор для бритья</span>
-                <span>«Baxter of California»</span>
+              <a class="catalog-item-caption" href="catalog.html">
+                <span class="catalog-item-caption-name">Набор для бритья</span>
+                <span class="catalog-item-caption-brand">«Baxter of California»</span>
               </a>
             </h3>
-              <p>
-                <a href="catalog.html">
-                  <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-                </a>
-              </p>
               <p class="catalog-item-price">
                 <b>3 900 ₽</b>
                 <a href="#" class="button">Купить</a>
